<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/name"
        style="@style/new_cantact_label"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/edt_edit_name"
        style="@style/new_cantact_text"
        android:inputType="textCapWords|textCapSentences"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/tel"
        style="@style/new_cantact_label"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/edt_edit_tel"
        android:inputType="numberDecimal"
        style="@style/new_cantact_text" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/email"
        style="@style/new_cantact_label"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/edt_edit_email"
        android:inputType="textEmailAddress"
        style="@style/new_cantact_text"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:id="@+id/btn_cancel_edit"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update_contact"
            android:id="@+id/btn_update_contact"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_contact"
            android:id="@+id/btn_delete_contact"/>
    </LinearLayout>


</LinearLayout>