<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:background="@color/WhiteSmoke"
    android:layout_weight="1">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@mipmap/user"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/user_image" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5">

        <TextView
            android:text="@string/name"
            android:id="@+id/txtV_contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:layout_margin="1dp"
            android:gravity="start"
            style="@style/table_data"/>

        <TextView
            android:id="@+id/txtV_contact_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tel"
            android:layout_margin="1dp"
            android:textAlignment="viewStart"
            android:gravity="start"
            style="@style/table_data"/>

        <TextView
            android:id="@+id/txtV_contact_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_margin="1dp"
            android:textAlignment="viewStart"
            android:gravity="start"
            style="@style/table_data"/>

    </LinearLayout>

</LinearLayout>