<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:background="@color/Silver">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_name"
        android:textAlignment="center"
        android:textSize="22sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/txtName"
        android:drawableRight="@drawable/ic_edit_24dp"
        android:drawableStart="@mipmap/user"
        android:drawableLeft="@mipmap/user"
        android:drawableEnd="@drawable/ic_edit_24dp"
        android:layout_marginBottom="3dp"
        android:padding="10dp"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="1dp"
        android:padding="10dp"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tel"
            android:textSize="12sp"
            android:layout_margin="0dp"
            android:paddingTop="2dp"
            android:paddingLeft="10dp"
            android:paddingBottom="1dp"
            android:paddingRight="0dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:layout_margin="0dp"
            android:paddingTop="0dp"
            android:paddingLeft="10dp"
            android:text="@string/sample_tel"
            android:id="@+id/txtTel"
            android:paddingStart="10dp"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            android:drawableRight="@drawable/ic_call_24dp"
            android:drawableEnd="@drawable/ic_call_24dp" />
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="1dp"
        android:padding="10dp"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="12sp"
            android:layout_margin="0dp"
            android:paddingTop="2dp"
            android:paddingLeft="10dp"
            android:paddingBottom="1dp"
            android:paddingRight="0dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:layout_margin="0dp"
            android:paddingTop="0dp"
            android:paddingLeft="10dp"
            android:text="@string/sample_email"
            android:id="@+id/txtEmail"
            android:paddingStart="10dp"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            android:drawableRight="@drawable/ic_contact_mail_24dp"
            android:drawableEnd="@drawable/ic_contact_mail_24dp" />
    </LinearLayout>





</LinearLayout>